<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_op_corona"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.DG.roque.appistear.OpCorona"
    android:background="@mipmap/fondo">

    <Button
        android:text="@string/jugar"
        android:background="@drawable/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:textSize="18sp"
        android:textColor="#DEA230"
        android:id="@+id/btncorona" />

    <Button
        android:text="@string/comojugar"
        android:background="@drawable/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnhtpc"
        android:textSize="18sp"
        android:textColor="#DEA230"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/advopcor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bannerinf6" >
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
