<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jugadores_dinamicos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.DG.roque.appistear.JugadoresDinamicos"
    android:background="@mipmap/fondo">

    <TextView
        android:text="@string/jugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView4" />


    <Button
        android:text="@string/agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAgregar"
        android:textColor="#DEA230"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginBottom="50dp"
        android:background="@drawable/boton"
        />

    <Button
        android:text="@string/continuar"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonAgregar"
        android:layout_toRightOf="@+id/textView4"
        android:textColor="#DEA230"
        android:id="@+id/buttonContinuar"
        android:background="@drawable/boton"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="280sp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:id="@+id/linear"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp">
            </LinearLayout>
    </ScrollView>
</RelativeLayout>
