<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acercade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roque.appistear.Acercade"
    android:background="@mipmap/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/equipo"
        android:typeface="serif"
        android:fontFamily="cursive"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
       android:text="@string/equipo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/desarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/equipo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        android:typeface="serif"
        android:fontFamily="cursive"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:text="CARLOS V"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/p1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:text="ALAN GL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ag"
        android:typeface="serif"
        android:fontFamily="cursive"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/jr"
        android:layout_alignBottom="@+id/jr"
        android:layout_alignLeft="@+id/cv"
        android:layout_alignStart="@+id/cv" />

    <TextView
        android:text="KEVIN ANGEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ka"
        android:typeface="serif"
        android:fontFamily="cursive"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/disenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/d1"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/ka"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="J, ROQUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jr"
        android:typeface="serif"
        android:fontFamily="cursive"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="55dp"
        android:layout_above="@+id/d1"
        android:layout_alignRight="@+id/equipo"
        android:layout_alignEnd="@+id/equipo" />

    <TextView
        android:text="R. RAMOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rr"
        android:typeface="serif"
        android:fontFamily="cursive"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/cv"
        android:layout_alignBottom="@+id/cv"
        android:layout_alignLeft="@+id/jr"
        android:layout_alignStart="@+id/jr" />
</RelativeLayout>
